[gd_scene load_steps=13 format=3 uid="uid://b4qvt86p6nbss"]

[ext_resource type="Script" uid="uid://bjpoth1f05sia" path="res://objects/robot/robot.gd" id="1_nqrb4"]
[ext_resource type="ArrayMesh" uid="uid://cjyemus4avome" path="res://assets/models/Waist.obj" id="1_tsmxy"]
[ext_resource type="ArrayMesh" uid="uid://csx1xgb6rffur" path="res://assets/models/Base.obj" id="2_l5fd8"]
[ext_resource type="ArrayMesh" uid="uid://ixp2sbylccv6" path="res://assets/models/Arm 01.obj" id="2_vblfd"]
[ext_resource type="Script" uid="uid://dy2cx385hb8he" path="res://objects/robot/ArmScript.gd" id="4_473ep"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r4h84"]
height = 0.0152687
radius = 0.0193165

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_oecsm"]
bounce = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f72rv"]
albedo_color = Color(0.631373, 1, 0.858824, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hwsi1"]
points = PackedVector3Array(0.0135207, 0.139671, -0.00132302, -0.023523, -0.0243708, -0.00132302, -0.0208767, -0.027023, -0.00132302, -0.0129379, 0.102622, 0.0224913, 0.0214595, -0.00320252, 0.0171951, -0.023523, 0.12379, -0.00132302, 0.0214595, -0.0111427, -0.00132302, -0.023523, -0.00320252, 0.0171951, 0.0214595, 0.12379, 0.0145516, -0.023523, 0.12379, 0.0145516, 0.0135207, 0.0153135, 0.0224913, 0.0108744, -0.0217185, 0.0145516, -0.00764527, 0.142323, 0.0119058, 0.0135207, 0.102622, 0.0224913, 0.0214595, 0.131731, -0.00132302, -0.0129379, 0.0153135, 0.0224913, -0.0208767, -0.027023, 0.0119058, -0.0129379, 0.139671, -0.00132302, 0.0135207, 0.139671, 0.0119058, 0.0108744, -0.0217185, -0.00132302, -0.0208767, 0.131731, 0.0119058, 0.00822807, 0.142323, -0.00132302, 0.0214595, -0.0111427, 0.0145516, -0.0102916, -0.0217185, 0.0145516, 0.0188132, 0.0126778, 0.0198432, 0.00822807, 0.142323, 0.0119058, 0.0214595, 0.131731, 0.0119058, -0.0155841, -0.027023, 0.0119058, -0.023523, -0.0243708, 0.0119058, -0.0208767, 0.113215, 0.0171951, -0.00764527, 0.142323, -0.00132302, -0.0208767, 0.131731, -0.00132302)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sv3b8"]
height = 0.00446948
radius = 0.0483824

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fu5kn"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7wt6j"]
points = PackedVector3Array(0.0605361, 0.00399608, 0.00327574, 0.0605361, 0, 0.00327574, 0.0605361, 0.00399608, -0.00328761, 0.048993, 0.056, 0, 0.0486375, 0.056, 0.00589871, 0.059825, 0.00399608, 0.0098035, 0.059825, 0, 0.0098035, 0.0605361, 0, -0.00328761, 0.059825, 0.00399608, -0.00981537, 0.0486375, 0.056, -0.00591058, 0.0475708, 0.056, 0.0117262, 0.0584147, 0.00399608, 0.0162126, 0.0584147, 0, 0.0162126, 0.059825, 0, -0.00981537, 0.0584147, 0.00399608, -0.0162244, 0.0475708, 0.056, -0.0117381, 0.045805, 0.056, 0.0173638, 0.0563171, 0.00399608, 0.0224317, 0.0563171, 0, 0.0224317, 0.0584147, 0, -0.0162244, 0.0563171, 0.00399608, -0.0224436, 0.045805, 0.056, -0.0173757, 0.0433755, 0.056, 0.022764, 0.0535557, 0.00399608, 0.0283898, 0.0535557, 0, 0.0283898, 0.0563171, 0, -0.0224436, 0.0535557, 0.00399608, -0.0284017, 0.0433755, 0.056, -0.0227759, 0.0403179, 0.056, 0.027832, 0.0501781, 0.00399608, 0.0340155, 0.0501781, 0, 0.0340155, 0.0535557, 0, -0.0284017, 0.0501781, 0.00399608, -0.0340274, 0.0403179, 0.056, -0.0278438, 0.0366677, 0.056, 0.0324845, 0.0461961, 0.00399608, 0.0392377, 0.0461961, 0, 0.0392377, 0.0501781, 0, -0.0340274, 0.0461961, 0.00399608, -0.0392496, 0.0366677, 0.056, -0.0324963, 0.0324842, 0.056, 0.0366741, 0.0416808, 0.00399608, 0.0440089, 0.0416808, 0, 0.0440089, 0.0461961, 0, -0.0392496, 0.0416808, 0.00399608, -0.0440208, 0.0324842, 0.056, -0.036686, 0.0278267, 0.056, 0.0403178, 0.0366796, 0.00399608, 0.0482579, 0.0366796, 0, 0.0482579, 0.0416808, 0, -0.0440208, 0.0366796, 0.00399608, -0.0482697, 0.0278267, 0.056, -0.0403296, 0.0227662, 0.056, 0.0433799, 0.0312517, 0.00399608, 0.0519372, 0.0312517, 0, 0.0519372, 0.0366796, 0, -0.0482697, 0.0312517, 0.00399608, -0.051949, 0.0227662, 0.056, -0.0433917, 0.0173739, 0.056, 0.0458129, 0.0254446, 0.00399608, 0.0550111, 0.0254446, 0, 0.0550111, 0.0312517, 0, -0.051949, 0.0254446, 0.00399608, -0.055023, 0.0173739, 0.056, -0.0458248, 0.0117209, 0.056, 0.0475695, 0.0193531, 0.00399608, 0.0574442, 0.0193531, 0, 0.0574442, 0.0254446, 0, -0.055023, 0.0193531, 0.00399608, -0.0574561, 0.0117209, 0.056, -0.0475814, 0.00590191, 0.056, 0.0486377, 0.0130245, 0.00399608, 0.0592008, 0.0130245, 0, 0.0592008, 0.0193531, 0, -0.0574561, 0.0130245, 0.00399608, -0.0592126, 0.00590191, 0.056, -0.0486495, 0, 0.056, 0.0489937, 0.00655374, 0.00399608, 0.0602689, 0.00655374, 0, 0.0602689, 0.0130245, 0, -0.0592126, 0.00655374, 0.00399608, -0.0602808, 0, 0.056, -0.0490056, -0.00591376, 0.056, 0.0486377, -0.00656558, 0.00399608, 0.0602689, 0, 0.00399608, 0.060625, 0, 0, 0.060625, 0.00655374, 0, -0.0602808, 0, 0.00399608, -0.060625, -0.00591376, 0.056, -0.0486495, -0.00656558, 0.00399608, -0.0602808, -0.0117327, 0.056, 0.0475695, -0.0130364, 0.00399608, 0.0592008, -0.00656558, 0, 0.0602689, 0, 0, -0.060625, -0.0117327, 0.056, -0.0475814, -0.0130364, 0.00399608, -0.0592126, -0.00656558, 0, -0.0602808, -0.0173858, 0.056, 0.0458129, -0.0193649, 0.00399608, 0.0574442, -0.0130364, 0, 0.0592008, -0.0173858, 0.056, -0.0458248, -0.0193649, 0.00399608, -0.0574561, -0.0130364, 0, -0.0592126, -0.0254564, 0.00399608, 0.0550111, -0.0227781, 0.056, 0.0433799, -0.0193649, 0, 0.0574442, -0.0254564, 0.00399608, -0.055023, -0.0227781, 0.056, -0.0433917, -0.0193649, 0, -0.0574561, -0.0312635, 0.00399608, 0.0519372, -0.0254564, 0, 0.0550111, -0.0278385, 0.056, 0.0403178, -0.0312635, 0.00399608, -0.051949, -0.0254564, 0, -0.055023, -0.0278385, 0.056, -0.0403296, -0.0366914, 0.00399608, 0.0482579, -0.0312635, 0, 0.0519372, -0.0324961, 0.056, 0.0366741, -0.0312635, 0, -0.051949, -0.0366914, 0.00399608, -0.0482697, -0.0324961, 0.056, -0.036686, -0.0366914, 0, 0.0482579, -0.0416926, 0.00399608, 0.0440089, -0.0366796, 0.056, 0.0324845, -0.0366914, 0, -0.0482697, -0.0416926, 0.00399608, -0.0440208, -0.0366796, 0.056, -0.0324963, -0.0416926, 0, 0.0440089, -0.0462079, 0.00399608, 0.0392377, -0.0403297, 0.056, 0.027832, -0.0416926, 0, -0.0440208, -0.0462079, 0.00399608, -0.0392496, -0.0403297, 0.056, -0.0278438, -0.0462079, 0, 0.0392377, -0.05019, 0.00399608, 0.0340155, -0.0433874, 0.056, 0.022764, -0.0462079, 0, -0.0392496, -0.05019, 0.00399608, -0.0340274, -0.0433874, 0.056, -0.0227759, -0.05019, 0, 0.0340155, -0.0535676, 0.00399608, 0.0283898, -0.0563289, 0.00399608, 0.0224317, -0.0458169, 0.056, 0.0173638, -0.05019, 0, -0.0340274, -0.0535676, 0.00399608, -0.0284017, -0.0563289, 0.00399608, -0.0224436, -0.0458169, 0.056, -0.0173757, -0.0535676, 0, 0.0283898, -0.0563289, 0, 0.0224317, -0.0584266, 0.00399608, 0.0162126, -0.0475827, 0.056, 0.0117262, -0.0535676, 0, -0.0284017, -0.0563289, 0, -0.0224436, -0.0584266, 0.00399608, -0.0162244, -0.0475827, 0.056, -0.0117381, -0.0584266, 0, 0.0162126, -0.0598369, 0.00399608, 0.0098035, -0.0486493, 0.056, 0.00589871, -0.0584266, 0, -0.0162244, -0.0598369, 0.00399608, -0.00981537, -0.0486493, 0.056, -0.00591058, -0.0598369, 0, 0.0098035, -0.0605361, 0.00399608, 0.00327574, -0.0490048, 0.056, 0, -0.0598369, 0, -0.00981537, -0.0605361, 0.00399608, -0.00328761, -0.0605361, 0, 0.00327574, -0.0605361, 0, -0.00328761)

[node name="Robot" type="Node3D"]
script = ExtResource("1_nqrb4")

[node name="Wrist" type="RigidBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.012, 0.21, 0)
mass = 0.5
script = ExtResource("4_473ep")
rotation_axis = "Y"

[node name="Arm2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0056607, 0.119732, -0.000169388)
mass = 0.5
script = ExtResource("4_473ep")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arm2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.00574977, -0.00525235, 0)
shape = SubResource("CylinderShape3D_r4h84")

[node name="End" type="MeshInstance3D" parent="Arm2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.006, 0.136, 0)

[node name="Arm1" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00391829, -0.000276096, -0.000124088)
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_oecsm")
script = ExtResource("4_473ep")

[node name="Arm01" type="MeshInstance3D" parent="Arm1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_vblfd")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_f72rv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arm1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_hwsi1")

[node name="motorArm1" type="HingeJoint3D" parent="."]
transform = Transform3D(4.37114e-08, 3.82137e-15, -1, 8.74228e-08, -1, 0, -1, -8.74228e-08, -4.37114e-08, 0, -0.000426695, -4.79883e-05)
node_a = NodePath("../Waist")
node_b = NodePath("../Arm1")
params/bias = 0.99
angular_limit/enable = true
angular_limit/softness = 0.01

[node name="Waist" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0404612, 0.0136558)
mass = 0.5
script = ExtResource("4_473ep")
rotation_axis = "Y"

[node name="Waist" type="MeshInstance3D" parent="Waist"]
mesh = ExtResource("1_tsmxy")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Waist"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00183552, 0)
shape = SubResource("CylinderShape3D_sv3b8")

[node name="motorBase" type="HingeJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.0405369, 0.0136558)
node_a = NodePath("../Base")
node_b = NodePath("../Waist")
params/bias = 0.99
angular_limit/upper = -3.14159
angular_limit/lower = -1.0472
angular_limit/softness = 0.01

[node name="Base" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.167586, 0.0136558)

[node name="Base" type="MeshInstance3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0710954, 0)
mesh = ExtResource("2_l5fd8")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fu5kn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0710954, 0)
shape = SubResource("ConvexPolygonShape3D_7wt6j")
